--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"seed55_decks100_timestamp2025-03-01-21-22-47-508625.npy": {"seed": 55, "n": 100}, "seed55_decks100_timestamp2025-03-01-21-23-15-052350.npy": {"seed": 55, "n": 100}}
+{"seed55_decks100_timestamp2025-03-01-21-22-47-508625.npy": {"seed": 55, "n": 100}, "seed55_decks100_timestamp2025-03-01-21-23-15-052350.npy": {"seed": 55, "n": 100}, "seed55_decks100_timestamp2025-03-01-21-26-06-093154.npy": {"seed": 55, "n": 100}}
