Splitting works. Moving on to next task
Splitting the .npy files works. Need to change the .csv to have only 56 rows and have scores added to .csv rather than appended. Scoring probability also needs to be changed so that the heatmap becomes 2 separate ones for cards and tricks respectively

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"seed55_decks100_timestamp2025-03-01-21-22-47-508625.npy": {"seed": 55, "n": 100}, "seed55_decks100_timestamp2025-03-01-21-23-15-052350.npy": {"seed": 55, "n": 100}, "seed55_decks100_timestamp2025-03-01-21-26-06-093154.npy": {"seed": 55, "n": 100}}
+{"seed42_decks100000_split10_timestamp2025-03-28-19-52-21-822297.npy": {"seed": 42, "n": 100000}}
